# server/api/user.go
@@ -12,13 +12,14 @@ import (
 // UserRegister godoc
 //
 //	@Summary	login
+//	@Tags		users
 //	@Accept		json
 //	@Produce	json
 //	@Param		nickname			query	string	true	"nickname"
 //	@Param		user_name			query	string	true	"username"
 //	@Param		password			query	string	true	"password"
 //	@Param		password_confirm	query	string	true	"confirmation password"
-//	@Router		/users/register																												[post]
+//	@Router		/users/register																																																																																																																																																				[post]
 func UserRegister(c *gin.Context) {
 	var serv service.UserRegisterService
 	if err := c.ShouldBind(&serv); err == nil {
@@ -32,6 +33,7 @@ func UserRegister(c *gin.Context) {
 // UserLogin godoc
 //
 //	@Summary	login
+//	@Tags		users
 //	@Accept		json
 //	@Produce	json
 //	@Param		user_name		query	string	true	"username"
@@ -50,8 +52,11 @@ func UserLogin(c *gin.Context) {
 // UserMe godoc
 //
 //	@Summary	fetch user info
+//	@Tags		users
+//	@Accept		json
 //	@Produce	json
 //	@Router		/users/me	[get]
+//	@Security	SetCookie
 func UserMe(c *gin.Context) {
 	user := CurrentUser(c)
 	res := serializer.BuildUserResponse(*user)
@@ -61,8 +66,10 @@ func UserMe(c *gin.Context) {
 // UserLogout godoc
 //
 //	@Summary	current user logout
+//	@Tags		users
 //	@Produce	json
 //	@Router		/users/logout	[delete]
+//	@Security	SetCookie
 func UserLogout(c *gin.Context) {
 	s := sessions.Default(c)
 	s.Clear()
@@ -76,6 +83,7 @@ func UserLogout(c *gin.Context) {
 // UserFetch godoc
 //
 //	@Summary	fetch user info
+//	@Tags		users
 //	@Accept		json
 //	@Produce	json
 //	@Param		id			path	int	true	"user ID"
